--- a/.env.travis
+++ b/.env.travis
@@ -2,6 +2,10 @@ APP_ENV=testing
 APP_KEY=SomeRandomString
 
 DB_CONNECTION=testing
+DB_TEST_CONNECTION=mysql
+DB_TEST_HOST=127.0.0.1
+DB_TEST_PORT=3306
+DB_TEST_DATABASE=larapod_app_testing
 DB_TEST_USERNAME=root
 DB_TEST_PASSWORD=
 
