--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 language: php
 
 php:
-  - 7.0
   - 7.1
+  - 7.2
 
 services:
   - mysql
 
 before_script:
   - cp .env.travis .env
-  - mysql -e 'create database larapod_testing;'
+  - mysql -e 'create database larapod_app_testing;'
   - composer self-update
   - composer install --no-interaction
   - php artisan key:generate
