--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,11 @@ before_script:
   - composer install --no-interaction
   - php artisan key:generate
   - php artisan migrate --seed
-
+  - php artisan serve &
 
 script:
   - vendor/bin/phpunit
+  - php artisan dusk
 
 notifications:
   email:
