--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ before_script:
   - composer install --no-interaction
   - php artisan key:generate
   - php artisan migrate --seed
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - ./vendor/laravel/dusk/bin/chromedriver-linux &
   - php artisan serve &
 
 script:
